# alglbraic

./: .gitignore  MANIFEST.in  Pipfile  README.md  TODO.md  conversation with antonfire and MotivicScones about group algebras and ideal of additive identity  g-2-permutations-symmetric-group-S4-exploration-weighted.frag  g-2-w-involutions-and-dynamics.frag  g-3-animated.frag  g-3-w-involutions.frag  g-3.frag  geo-4-permutations  geoFractalFreshened.py  hand-coded-folded-quaternion-group-algebra.frag  linear time permutations.py  mat3-permutations.frag  mat4-permutations.frag  mypy.ini  package.json  pyproject.toml  rudimentary-g4.frag  rudimentary-g8.frag  rudimentary.frag  rudimentary.workz.frag  rudimentaryfixes.frag  setup.py  some-folded-hopf-algebra.frag  some-hopf-algebra.frag  some-incidence-algebra-5-from-a-3-element-poset.frag  vectorFractal.py  vectorPermutations.py
aglebraic/: GLSLPrinter.py  fragments.py  operations.py
alglbraic/: .FractalQuest.py.swp  AlgebraicProduct.py  FractalQuest.py  FragmentariumParams.py  GLSLPrinter.py  GeometricAlgebra.bk.py  GeometricAlgebra.py  Norm.py  Permutations.py  RotationOperation.py  SignFlipper.py  VectorOperation.py  VectorSpace.py  Window.py  __init__.py  algebra.py  algebraicfractal.py  finite_module.py  functions.py  glsl.py  half finished overhaul notes.md  operator.py  struct.py  util.py  vectorspace.py
examples/: C.glsl  CGA2.glsl  CGA3.glsl  Dual.glsl  GA2.glsl  GA3.glsl  GeometricAlgebra.py  H.glsl  PGA2.glsl  PGA3.glsl  build-examples.sh  printMultivector.py
fragments/: vectorOperations.frag
glbraic/: __init__.py  fragment.py  vectorspacegl.py
log/: stack exchange question about derivative of reverse
misc/: g-3 rectangular surprise!.frag
templates/: algebra.frag
(+326 files in other folders)
