[tool.poetry]
name = "alglbraic"
version = "0.1.2"
description = "Tools for doing algebra in GLSL"
authors = ["Micah Fitch <micahscopes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
galgebra = "^0.4.3"
click = "*"
nodeenv = "*"
sympy = {path = "../sympy"}
toposort = "^1.5"
read-only-property = "^0.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
snapshottest = "^0.5.0"
pytest = "^4.3"
v = "^0.0.0"
nose = "^1.3"
nose-watch = "^0.9.2"
pdoc = "^0.3.2"
ipdb = "^0.11.0"
ipdbplugin = "^1.5"
poetry = "^0.12.11"
flake8 = "^3.7"
flake8-mypy = "^17.8"
autopep8 = "^1.4"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8-black = "^0.0.4"
ipython = "^7.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
