[tool.poetry]
name = "alglbraic"
version = "0.1.6"
description = "Tools for doing algebra in glsl_snippet"
authors = ["Micah Fitch <micahscopes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
galgebra = "^0.4.3"
nodeenv = "*"
sympy = "*"
toposort = "^1.5"
read-only-property = "^0.1.0"
click = "*"
click-configfile = "^0.2.3"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
snapshottest = "^0.6.0"
v = "^0.0.0"
pdoc = "*"
ipdb = "*"
ipdbplugin = "^1.5"
poetry = "*"
flake8 = "^3.7"
flake8-mypy = "^17.8"
autopep8 = "^1.4"
flake8-black = "^0.0.4"
ipython = "^7.4"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pytest = "^6.2.5"
pytest-watch = "^4.2.0"

[tool.poetry.plugins."console_scripts"]
"algl" = "alglbraic.util.cli:cli"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

